Closed Bug 331958 Opened 19 years ago Closed 19 years ago

Crash when selecting text, using rtl object with css generated content and designMode

Categories

(Core :: Layout: Text and Fonts, defect)

defect
Not set
critical

Tracking

()

VERIFIED FIXED
mozilla1.9alpha1

People

(Reporter: martijn.martijn, Assigned: uriber)

References

Details

(4 keywords)

Attachments

(3 files)

See upcoming testcase, that crashes current trunk Mozilla builds, when starting the selection outside the block and then moving inside it. This regressed between 2006-02-21 and 2006-02-22, so I think it's a regression from bug 299065. Talkback ID: TB16947026X 0x00000000 GetNearestCapturingView nsFrame::HandleEvent nsPresShellEventCB::HandleEvent nsEventTargetChainItem::CreateChainAndHandleEvent nsEventTargetChainItem::CreateChainAndHandleEvent nsEventTargetChainItem::CreateChainAndHandleEvent nsEventTargetChainItem::CreateChainAndHandleEvent nsEventTargetChainItem::CreateChainAndHandleEvent nsEventTargetChainItem::CreateChainAndHandleEvent nsEventTargetChainItem::CreateChainAndHandleEvent nsEventTargetChainItem::CreateChainAndHandleEvent nsEventTargetChainItem::CreateChainAndHandleEvent nsEventTargetChainItem::CreateChainAndHandleEvent nsEventTargetChainItem::CreateChainAndHandleEvent nsEventTargetChainItem::CreateChainAndHandleEvent nsEventTargetChainItem::CreateChainAndHandleEvent nsEventTargetChainItem::CreateChainAndHandleEvent nsEventTargetChainItem::CreateChainAndHandleEvent nsEventTargetChainItem::CreateChainAndHandleEvent nsEventTargetChainItem::CreateChainAndHandleEvent nsEventDispatcher::Dispatch PresShell::HandleEventInternal PresShell::HandlePositionedEvent PresShell::HandleEvent nsViewManager::HandleEvent nsViewManager::DispatchEvent HandleEvent nsWindow::DispatchEvent nsWindow::DispatchMouseEvent
Attached file testcase
Attached file Backtrace
I don't get a backtrace from the crash with a debug build, but prior to the crash I get this assertion (I attached the backtrace for that assertion). ###!!! ASSERTION: continuing frame had more severe impact than first-in-flow: '! frame->GetPrevContinuation()', file c:/mozilla/mozilla/layout/base/nsFrameManage r.cpp, line 1374
Depends on: 331967
Well, I just filed 331967, which seems similar to this bug (with steps to reproduce and talkback), but but that bug doesn't use rtl text and has a different regression range. Might be useful to know.
Reproducable on OS X => All/All
OS: Windows XP → All
Hardware: PC → All
Attached patch patchSplinter Review
Changed one case of GetPrevInFlow which I originally missed to GetPrevContinuation. Also changed variable names and comments to reflect the fact that we're dealing with continuations, not necessarily in-flows.
Attachment #216611 - Flags: superreview?
Attachment #216611 - Flags: review?
Attachment #216611 - Flags: superreview?(dbaron)
Attachment #216611 - Flags: superreview?
Attachment #216611 - Flags: review?(dbaron)
Attachment #216611 - Flags: review?
Status: NEW → ASSIGNED
Comment on attachment 216611 [details] [diff] [review] patch r+sr=dbaron. Sorry for the delay.
Attachment #216611 - Flags: superreview?(dbaron)
Attachment #216611 - Flags: superreview+
Attachment #216611 - Flags: review?(dbaron)
Attachment #216611 - Flags: review+
Assignee: mozilla → uriber
Status: ASSIGNED → NEW
Target Milestone: --- → mozilla1.9alpha
Checked in: Checking in layout/base/nsFrameManager.cpp; /cvsroot/mozilla/layout/base/nsFrameManager.cpp,v <-- nsFrameManager.cpp new revision: 1.229; previous revision: 1.228 done
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Verified FIXED using https://bugzilla.mozilla.org/attachment.cgi?id=216514 as the testcase with build 2006-04-10-16 of SeaMonkey trunk on Windows XP. No crash.
Status: RESOLVED → VERIFIED
Mass-assigning the new rtl keyword to RTL-related (see bug 349193).
Keywords: rtl
Component: Layout: BiDi Hebrew & Arabic → Layout: Text
QA Contact: zach → layout.fonts-and-text
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: