Bug 331958: Crash when selecting text, using rtl object with css generated content and designMode. r+sr=dbaron